# robotics-traveling-van-bbb

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  PID_v1.cpp  README.md  configuration.hpp  log.txt  log2.txt  main.cpp
PCB/: 1_RB2Library.kicad_sym  1_SymbolLibrary.kicad_sym  2_RB2.kicad_sym  RTV_Robot2_BBB.kicad_prl  RTV_Robot2_BBB.kicad_pro  RTV_Robot2_BBB.kicad_sch
include/: configuration.hpp  configuration.hpp.bak
scripts/: buildFresh.sh  submoduleSetup.sh  upload.sh
sims/: main.py  pyproject.toml
src/: configuration.hpp  main.cpp  main.cpp.bak  motor.cpp  motor.hpp  screen.cpp  screen.hpp  src.ino  touch.cpp  touch.hpp
